# finetune_llm

./: .gitignore  README.md  custom_types.py  error_analysis.ipynb  finetune.py  finetune_sft.py  finetune_unsloth.py  install_odbc_driver_ubuntu.sh  pyproject.toml  qpl_types_concert_singer.json  requirements.txt  runfast.sh  test.ipynb  test.py  type_check_errors.json  viz.py
callbacks/: README.md  __init__.py  classification_evaluation.py  memory_logging.py
data/: README.md  create_composer_data.py
data/qpl/types/: question_types_concert_singer.json
databuilders/: README.md  create_completer_data.py  create_composer_data.py
inference/qpl/: completer_test.ipynb  decomposer_test.ipynb  qpl_to_type.py  text_to_qpl.py  text_to_sql.py  types.py  validate_qpl.py
inference/qpl/database_creation/: create_db.py
inference/qpl/types/: compare_models.ipynb  qpl_to_type.py  schema_types.py  test_llm.py  test_llm_hf.py  types.py
input/qpl/: Error Analysis.xlsx
input/qpl/spider/: db_metadata.json  db_schemas.json
input/qpl/types/: auto_battle_death.json  auto_concert_singer.json  question_types_battle_death.json  question_types_concert_singer.json  simple_battle_death.json  simple_concert_singer.json
processors/: __init__.py  base.py  dair_ai_emotion.py  processor.py
processors/nl2qpl/: processor.py
processors/qpl/: __init__.py  base.py  composer.py  decomposer.py  nl2qpl.py
src/callbacks/: __init__.py  memory_logging.py
src/databuilders/: balance_dataset.ipynb  create_completer_data.py
src/databuilders/completer/: build.py  create_completer_data.py
src/databuilders/completer_cot/: build.py
src/databuilders/decomposer_cot/: balance_dataset.ipynb  build.py  generate_cot.py
src/databuilders/merge_filter_scan/: build.py
src/databuilders/schema_linker/: build.py
src/evaluation/: evaluate_dspy.ipynb  overall_test.ipynb  text_to_qpl.py  text_to_qpl_dspy.py  validate_qpl.py
src/experiments/: error_analysis.ipynb  qpl_to_cte.py
src/experiments/ablation/: completer.py  decomposer.py
src/experiments/qpl/: completer_test.ipynb  decomposer_test.ipynb  evaluate_dspy.ipynb  qpl_to_cte.py  text_to_qpl.py  text_to_qpl_dspy.py  validate_qpl.py
src/experiments/type_checker/: compare_models.ipynb  (+5 more)
src/processors/: README.md  __init__.py  base.py  dair_ai_emotion.py
src/prompters/: README.md  __init__.py  base.py  dair_ai_emotion.py
src/qpl/: completer_test.ipynb  decomposer_test.ipynb  validate_qpl.py
src/training/: finetune_sft.py  finetune_unsloth.py
src/utils/: chat_types.py  generation.py  lists.py  paths.py  schema.py  tree.py  viz.py
utils/: argparse.py  argparse_utils.py  generation.py  generation_utils.py  lists.py
utils/qpl/: paths.py  tree.py
(+64 files in other folders)
