[project]
name = "finetune-llm"
version = "0.1.0"
description = "Fine tune any LLM on any dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiolimiter==1.2.1",
    "datasets==4.0.0",
    "deepspeed==0.17.4",
    "evaluate==0.4.3",
    "hf-xet==1.1.5",
    "huggingface-hub==0.34.3",
    "numpy==2.3.2",
    "pandas==2.3.1",
    "peft==0.15.2",
    "pyodbc==5.2.0",
    "rich-argparse==1.7.1",
    "simple-parsing==0.1.7",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "transformers==4.54.1",
    "trl==0.20.0",
    "wandb==0.19.9",
    # "flash-attn==2.8.2",
    "python-dotenv==1.1.1",
    "dspy==3.0.2",
    "pydash==8.0.5",
    "pyodbc==5.2.0",
    "sqlalchemy==2.0.41",
    "sentence-transformers==4.1.0",
    "openpyxl==3.1.5",
    "graphviz==0.21",
    "mlflow>=3.3.2",
]

# [tool.uv]
# no-build-isolation-package = ["flash-attn"]

[project.optional-dependencies]
notebook = [
    "ipykernel==6.29.5",
    "matplotlib==3.10.3",
]
